Fix NodeManager Sonar issues